--- a/package.json
+++ b/package.json
@@ -3,24 +3,56 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^13.0.0",
-    "@testing-library/user-event": "^13.2.1",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.0"
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
+    "@hookform/resolvers": "2.8.0",
+    "@mui/icons-material": "^5.3.1",
+    "@mui/lab": "^5.0.0-alpha.66",
+    "@mui/material": "^5.3.1",
+    "@mui/styles": "^5.3.0",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.3.2",
+    "@testing-library/user-event": "^7.1.2",
+    "@types/jest": "^24.0.0",
+    "@types/node": "^12.0.0",
+    "@types/react": "^16.9.0",
+    "@types/react-dom": "^16.9.0",
+    "@unform/core": "^2.0.0",
+    "@unform/web": "^2.0.0",
+    "axios": "^0.24.0",
+    "date-fns": "^2.13.0",
+    "formik": "^2.2.9",
+    "polished": "^3.5.1",
+    "react": "^17.0.2",
+    "react-day-picker": "^7.4.8",
+    "react-dom": "^17.0.2",
+    "react-hook-form": "^7.25.1",
+    "react-icons": "^3.9.0",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "4.0.3",
+    "react-spring": "^8.0.27",
+    "react-virtualized": "^9.22.3",
+    "styled-components": "^5.1.0",
+    "typescript": "^4.1.2",
+    "uuidv4": "^6.0.7",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "test:coverage": "react-scripts test --coverage --watchAll false",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
+    "extends": "react-app"
+  },
+  "jest": {
+    "collectCoverageFrom": [
+      "src/pages/**/*.tsx",
+      "src/components/**/*.tsx",
+      "src/hooks/*.tsx",
+      "!src/hooks/index.tsx"
     ]
   },
   "browserslist": {
@@ -34,5 +66,14 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@testing-library/react-hooks": "^3.3.0",
+    "@types/react-router-dom": "^5.1.4",
+    "@types/styled-components": "^5.1.0",
+    "@types/yup": "^0.29.13",
+    "axios-mock-adapter": "^1.18.1",
+    "react-test-renderer": "^16.13.1",
+    "ts-jest": "^26.1.0"
   }
 }
